feat: expose Metabase card SQL to Dify
